Migrate from debug-mcp to symfony/ai-mate MCP server
Major refactoring to use the official symfony/ai-mate package:

- Replace debug-mcp packages with symfony/ai-mate
- Rename MCP server from 'debug-mcp-symfony' to 'mate'
- Move custom tools/resources from mcp/ to mate/ directory
- Add .mate/ configuration directory with services.php and extensions.php
- Update documentation to reflect new package and usage patterns
- Remove deprecated example files and test scripts
- Add tmp/ to .gitignore for temporary files

Configuration changes:
- New .mate/services.php for DI container integration
- New .mate/extensions.php for extension management
- Updated composer.json with ai-mate configuration section
- Removed debug-mcp-resources and debug-mcp-prompts dependencies

The MCP server now provides cleaner integration with Symfony's
dependency injection container and supports auto-discovery of
custom tools and resources from the mate/ directory.

--- a/composer.json
+++ b/composer.json
@@ -17,20 +17,6 @@
             "options": {
                 "symlink": true
             }
-        },
-        {
-            "type": "path",
-            "url": "../debug-mcp-resources",
-            "options": {
-                "symlink": true
-            }
-        },
-        {
-            "type": "path",
-            "url": "../debug-mcp-prompts",
-            "options": {
-                "symlink": true
-            }
         }
     ],
     "require": {
@@ -43,9 +29,7 @@
         "symfony/framework-bundle": "8.0.*",
         "symfony/runtime": "8.0.*",
         "symfony/yaml": "8.0.*",
-        "wachterjohannes/debug-mcp": "@dev",
-        "wachterjohannes/debug-mcp-prompts": "@dev",
-        "wachterjohannes/debug-mcp-resources": "@dev",
+        "symfony/ai-mate": "@dev",
         "wachterjohannes/debug-mcp-tools": "@dev"
     },
     "config": {
@@ -59,7 +43,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/",
+            "App\\Mate\\": "mate/"
         }
     },
     "autoload-dev": {
@@ -98,6 +83,14 @@
         "symfony": {
             "allow-contrib": false,
             "require": "8.0.*"
+        },
+        "ai-mate": {
+            "scan-dirs": [
+                "mate"
+            ],
+            "includes": [
+                "services.php"
+            ]
         }
     }
 }
